# Dial-Server

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-single-platform.yml
src/server/: main.cpp  server.cpp
src/test_client/: client.cpp
